Changed the mail url based on dev and prod profile

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -16,3 +16,5 @@ spring.mail.username=sanyasisahu1280@gmail.com
 spring.mail.password=tldfsheeqzewfpzd
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+tempLogin.link=http://localhost:8888/tempLogin
