--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -16,3 +16,5 @@ spring.mail.username=sanyasisahu1280@gmail.com
 spring.mail.password=tldfsheeqzewfpzd
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+tempLogin.link=https://hrportal-springbootthymeleaf-production.up.railway.app/tempLogin
